# spec-agent-cli

./: .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: check-docs-sync.sh
.codex/: hooks.json
.codex/hooks/: check-okf-version.sh
.github/workflows/: code-quality.yml  coverage.yml  snyk.yml  tests.yml
docs/: GOAL.md  architecture.md  contributing.md  host-cli-generator-test.md  index.md  log.md  my-cli-generator-test.md  okf-map.yml  pipx-artifact-guide.md  skill-research.md
docs/adr/: README.md  adr-0001-record-architecture-decisions.md  adr-0002-hexagonal-architecture.md  adr-0003-language-model-protocol-and-registry.md  adr-0004-zero-runtime-dependencies.md  adr-0005-markdown-with-minimal-parser.md  adr-0006-file-block-output-contract.md  adr-0007-bundle-specs-skills-in-wheel.md  adr-0008-env-var-configuration.md  adr-0009-safe-by-default-build-writes.md  adr-0010-okf-docs-validation.md  adr-0011-provider-sdks-in-ci.md  adr-0012-dual-agent-config-parity.md  index.md
docs/guides/: my-cli-generator-test.md  pipx-artifact-guide.md
docs/notes/: skill-research.md
docs/specs/: README.md  (+10 more)
scripts/: check-okf-docs.py  okf
skills/: README.md
specs/: README.md
tests/: test_agent.py  test_anthropic_provider.py  test_cli.py  test_cli_build.py  test_factory.py  test_fileset.py  test_host_command.py  test_my_cli_command.py  test_openai_provider.py  test_repo_health.py  test_resources.py  test_settings.py  test_skills.py  test_specs.py
(+51 files in other folders)
