[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-agent-cli"
version = "0.1.0"
description = "Vendor-neutral Python 3.12+ CLI scaffold for AI agent workflows."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Lila Brooks" }]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "coverage[toml]>=7.6.0",
    "hatchling>=1.25",
    "mypy>=1.18.0",
    "pytest>=8.4.0",
    "ruff>=0.13.0",
]

[project.scripts]
agent = "agent_cli.cli:main"
# my-cli fixture: comment out or remove this generated CLI app for an actual project.
my-cli = "agent_cli.commands.my_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cli"]

[tool.pytest.ini_options]
addopts = "-q --strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PIE",
    "PL",
    "PTH",
    "RET",
    "RUF",
    "SIM",
    "T20",
    "UP",
    "W",
]
ignore = [
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src/agent_cli"]

[tool.coverage.run]
branch = true
source = ["agent_cli"]

[tool.coverage.report]
show_missing = true
skip_covered = true
